--- a/templates/backstage/ai-agents/strands/ci/templates/argoevents.yaml
+++ b/templates/backstage/ai-agents/strands/ci/templates/argoevents.yaml
@@ -147,7 +147,7 @@ spec:
                           - |
                             mkdir -p /root/.docker
                             PASSWORD=$(aws ecr get-login-password --region us-west-2)
-                            aws ecr create-repository --repository-name {{`{{inputs.parameters.image-name}}`}} --region us-west-2 || echo "Already exists"
+                            aws ecr create-repository --repository-name {{`{{inputs.parameters.image-name}}`}} --region us-west-2 || || echo "Repository Already exists"
                             AUTH=$(printf "AWS:%s" "${PASSWORD}" | base64 | tr -d '\n')
                             printf '{"auths":{"229560443702.dkr.ecr.us-west-2.amazonaws.com":{"auth":"%s"}}}' "${AUTH}" > /root/.docker/config.json
                     container:
