--- a/templates/backstage/ai-agents/provisioner/workflow.yaml
+++ b/templates/backstage/ai-agents/provisioner/workflow.yaml
@@ -551,7 +551,7 @@ spec:
                             echo "  $env:" >> cd-test.yaml
                             echo "    repo: $deploy_repo" >> cd-test.yaml
                             echo "    path: environments/$env " >> cd-test.yaml
-                            echo "    namespace: $service_name " >> cd-test.yaml
+                            echo "    namespace: $service_name-$env " >> cd-test.yaml
                           done &&
                           helm template . -f cd-test.yaml &&
                           helm template . -f cd-test.yaml | kubectl apply -f -
