--- a/templates/backstage/ai-agents/template.yaml
+++ b/templates/backstage/ai-agents/template.yaml
@@ -28,7 +28,7 @@ spec:
           default: AgentCore
           enum:
             - AgentCore
-            - LangChain
+            - LangGraph
         agentSDK:
           title: AgentSDK
           type: string
